k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: netanchor
spec:
  selector:
    app.kubernetes.io/name: netanchor
  ports:
    - name: http
      port: 80
      targetPort: http
      appProtocol: http
